// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create route 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <div
      class="Header"
    >
      <a
        class="created-by"
        href="https://portfolio.jpmunz.com"
      >
        By Jonathan Munz
      </a>
      <a
        href="/"
      >
        <img
          alt=""
          class="logo"
          src="logo.svg"
        />
      </a>
    </div>
    <div
      class="container justify-content-center"
    >
      <div>
        Mocked Create
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default route 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <div
      class="Header"
    >
      <a
        class="created-by"
        href="https://portfolio.jpmunz.com"
      >
        By Jonathan Munz
      </a>
      <a
        href="/"
      >
        <img
          alt=""
          class="logo"
          src="logo.svg"
        />
      </a>
    </div>
    <div
      class="container justify-content-center"
    >
      <div>
        Mocked Home
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Edit route 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <div
      class="Header"
    >
      <a
        class="created-by"
        href="https://portfolio.jpmunz.com"
      >
        By Jonathan Munz
      </a>
      <a
        href="/"
      >
        <img
          alt=""
          class="logo"
          src="logo.svg"
        />
      </a>
    </div>
    <div
      class="container justify-content-center"
    >
      <div>
        Mocked Edit
      </div>
    </div>
  </div>
</DocumentFragment>
`;
